<resources>
    <string name="app_name">CVector</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="or_login_with">Or login with</string>
    <string name="already_have_account">Already \nhave an \nAccount?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="mobile_number">mobile number</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="ready_to_evolve_with_artificial_intelligence">Ready To\nEvolve With \nArtificial \nIntelligence?</string>
    <string name="profile_created_at">profile created at</string>
    <string name="action_logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //fragments
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_users">Users</string>
    <string name="postedAt">posted at</string>
    <string name="title_description">title/description</string>

</resources>